# VirtualAssistant

./: chat.py  chat.txt  citadelCommands.txt  main.py  passphrase.txt  pyproject.toml
notes/: Listen for a repsone.txt  test file.txt  test title.txt
